# nhp_model

./: .coveragerc  .dockerignore  .gitignore  .lintr  .pylintrc  CITATION.cff  Dockerfile  National Run.py  _targets.R  check_gams.ipynb  codecov.yml  combine_results.py  config.py  create_az_rg.ps1  demo.R  demographic_factors.csv  docker_run.py  docker_test.py  download_data.ps1  download_data.sh  environment.yml  environment_dev.yml  mkdocs.yml  model.py  params-schema.json  principal_projection.ipynb  process_queue.py  process_results.ipynb  providers.json  pyproject.toml  readme.md  requirements.txt  run.ipynb  run_aae_model.py  run_all_models.py  run_batch.py  run_inpatients.ipynb  run_inpatients_model.py  run_model.ipynb  run_model.py  (+9 more)
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build_app.yaml  build_container.yaml  build_container_uv.yaml  build_schema.yaml  codecov.yaml  deploy_dev.yaml  deploy_docs.yaml  deploy_pr.yaml  deploy_release.yaml  deploy_schema.yaml  deploy_schemas.yaml  linting.yaml  remove_container.yaml  remove_pr_container_image.yaml  remove_untagged_container_images.yaml  removed_closed_prs.yaml
batch/: __init__.py  __main__.py  batch_exception.py  config.py  config_sample.py  connections.py  jobs.py  pool.py  process_queue.py  requirements.txt  run_model.py
data/reference/: hsa_split_normal_params.csv  life_expectancy.csv  variant_lookup.json
data_extraction/: bads_baseline_figures.R  create_demographic_factors.R  extract_aae_data.R  extract_ecds_data.R  extract_ip_data.R  extract_op_data.R  extract_reference_data.R  generate_activity_counts.R  generate_synth.R  kh03.R  providers.json  theatres.R  upload_file_to_azure.R
dev/: params-schema.json
docs/: aae.rst  conf.py  gen_ref_pages.py  helpers.rst  hsa_gams.rst  index.md  index.rst  inpatients.rst  model.rst  model_save.rst  outpatients.rst
migration/: __main__.py  azure_storage.py  convert_all_files_in_folder.py  v04.py  v05.py  v06.py  v10.py
model/: AaEModel.py  InpatientsModel.py  Model.py  OutpatientsModel.py  __init__.py  aae.py  activity_avoidance.py  activity_resampling.py  health_status_adjustment.py  helpers.py  hsa_gams.py  inpatients.py  inpatients_admissions_counter.py  model.py  model_iteration.py  model_run.py  model_save.py  nhp_data.py  nhp_data_local.py  outpatients.py  results.py  row_resampling.py
model/data/: __init__.py  data.py  databricks.py  local.py
model/inpatients/: __init__.py  inpatient_efficiencies.py  inpatients_model.py  los_reduction.py  row_resampling.py
nhpmodel/: .Rbuildignore  DESCRIPTION  NAMESPACE
nhpmodel/R/: ZZZ.R  demographic_factors.R  model.R  run_model.R
nhpmodel/inst/data/: demographic_factors.csv  strategies.csv
nhpmodel/man/: demographic_factors.Rd  model.Rd
notebooks/: check_datasets.ipynb  check_gams.ipynb  extract_data_from_databricks.py  generate_gams.py  generate_national_gams.py  generate_synthetic_datasets.ipynb  model_usage_example.ipynb  national_run.py  run_model.ipynb  sythetic__test__20220729_112937.json  use_results.rmd
outputs/: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  outputs.Rproj
outputs/R/: ZZZ.R  app_config.R  app_server.R  app_ui.R  fct_azure_batch.R  fct_azure_cosmos.R  fct_data.R  fct_display.R  fct_grouped_complete.R  fct_gt_bar.R  fct_gt_theme.R  fct_process_param_file.R  fct_submit_model_run.R  golem_utils_ui.R  mod_measure_selection.R  mod_model_core_activity.R  mod_model_results_distribution.R  mod_params_upload.R  mod_principal_change_factor_effects.R  mod_principal_detailed.R  mod_principal_high_level.R  mod_result_selection.R  mod_running_models.R  run_app.R
outputs/dev/: run_dev.R
outputs/inst/: golem-config.yml  life_expectancy.rds
queue/: params-sample.json  sample_params.json
schemas/: params-schema.json  v3.3-schema.json
schemas/v1/: params-schema.json
src/nhp/: __init__.py
src/nhp/docker/: __init__.py  __main__.py  config.py  run.py
src/nhp/model/: __init__.py  __main__.py  aae.py  activity_resampling.py  health_status_adjustment.py  helpers.py  hsa_gams.py  inpatients.py  model.py  model_iteration.py  outpatients.py  results.py  run.py
src/nhp/model/data/: __init__.py  data.py  databricks.py  local.py
src/nhp/model/params/: __init__.py  __main__.py  params-sample.json  params-schema.json
tests/: conftest.py  test_aae.py  test_activities.py  test_activity_avoidance.py  test_activity_resampling.py  test_docker_run.py  test_docker_test.py  test_health_status_adjustment.py  test_helpers.py  test_hsa_gams.py  test_inpatient_efficiencies.py  test_inpatients.py  test_inpatients_admissions_counter.py  test_model.py  test_model_iteration.py  test_model_run.py  test_model_save.py  test_nhp_data.py  test_nhp_data_local.py  test_outpatients.py  test_results.py  test_run_model.py
tests/data/: test_data.py  test_local.py  test_reference.py
tests/e2e/: test_run_model_snapshot.py
tests/e2e/test_run_model_snapshot/: test_all_model_runs_acuity_.csv  test_all_model_runs_age_.csv  test_all_model_runs_attendance_category_.csv  test_all_model_runs_avoided_activity_.csv  test_all_model_runs_default_.csv  test_all_model_runs_delivery_episode_in_spell_.csv  test_all_model_runs_sex_age_group_.csv  test_all_model_runs_sex_tretspef_grouped_.csv  test_all_model_runs_step_counts_.csv  test_all_model_runs_tretspef_.csv  test_all_model_runs_tretspef_los_group_.csv  test_model_results_returns_expected_keys.yml
tests/integration/nhp/model/: test_run_model.py  (+2 more)
tests/nhp/docker/: test___main__.py  test_config.py  test_run.py
tests/nhp/model/: test___init__.py  test__main__.py  test_aae.py  test_activity_resampling.py  test_health_status_adjustment.py  test_helpers.py  test_hsa_gams.py  test_inpatient_efficiencies.py  test_inpatients.py  test_model.py  test_model_iteration.py  test_outpatients.py  test_params.py  test_results.py  test_run.py
v4.0/: params-schema.json
v4.1/: params-schema.json
v4.2/: params-schema.json
v4.3/: params-schema.json
v4.4/: params-schema.json
v5.0/: params-schema.json
v5.1/: params-schema.json
v5.2/: params-schema.json
(+34 files in other folders)
