[project]
name = "nhp-model"
dynamic = ["version"]
description = "New Hospital Programme demand model"

requires-python = ">=3.12,<3.14"

dependencies = [
    "azure-data-tables>=12.7.0",
    "azure-identity>=1.12",
    "azure-storage-blob>=12.29.0",
    "azure-storage-file-datalake>=12.24.0",
    "importlib-resources>=7.1.0",
    "jsonschema>=4.23.0",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.0",
    "scipy>=1.17.1",
    "tqdm>=4.65",
]

[dependency-groups]
dev = [
    "coverage>=7.14.0",
    "isort>=8.0.1",
    "pytest>=9.0.3",
    "pytest-cov>=4.0",
    "pytest-regressions>=2.10.0",
    "pytest-mock>=3.10",
    "ruff>=0.15.13",
    "setuptools-scm>=8.3.1",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
]

# Explicitly specify which packages to include
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nhp.model.data.reference" = ["*.csv", "*.json"]
"nhp.model.params" = ["*.json"]

[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py312"
indent-width = 4
exclude = ["docs"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "D",       # pydocstyle
    "PLC0415", # `import` should be at the top-level of a file
    "PLR2004", # Magic value used in comparison
    "PD901",   # Avoid using the generic variable name `df`
    "RUF005",  # list concatenation
]

[tool.ruff.lint]
# Simple rules: pylint + isort
select = [
    "D",   # pydocstyle
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
    "PL",  # pylint rules,
    "PD",  # pandas-vet
    "NPY", # NumPy-specific rules
    "RUF", # Ruff-specific rules
]

[tool.ruff.lint.isort]
# isort configuration
force-single-line = false
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 7

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.setuptools_scm]
write_to = "src/nhp/model/_version.py"
fallback_version = "0.0.0"

[tool.ty.src]
exclude = ["docs"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
python_files = ["test_*.py"]
norecursedirs = ["docs", "*.egg-info", ".git", "appdir", ".tox", "__pycache__"]
